feat: allow object values to be used for callbacks

--- a/addon/components/select-light.hbs
+++ b/addon/components/select-light.hbs
@@ -11,6 +11,7 @@
     {{yield (hash
       option=(
         component "select-light/option"
+        parent=this
         valueKey=this.valueKey
         displayKey=this.displayKey
         selectedValue=@value
@@ -19,6 +20,7 @@
   {{else}}
     {{#each @options as | optionValue |}}
       <SelectLight::Option
+        @parent={{this}}
         @valueKey={{this.valueKey}}
         @displayKey={{this.displayKey}}
         @value={{optionValue}}
